create keystore for sign release apk and add relogin when request api response BAD_SESSION/UNAUTHORIZED/BAD_CSRF.

--- a/ks.properties
+++ b/ks.properties
@@ -2,3 +2,9 @@ keyAlias = xma
 keyPwd = xiaojs100y
 storeFile = ks.jks
 storePwd = xiaojs100y
+
+
+#keyAlias = xjs_edu
+#keyPwd = xjs2016
+#storeFile = xiaojs.jks
+#storePwd = xiaojs2016...
